fixed text wrap with <pre> elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,14 @@ h6, p, pre {
   margin-top: 0px;
 }
 
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 label {
   font-weight: normal; }
 
